--- a/app/js/app/partials/shared/codeEditor.html
+++ b/app/js/app/partials/shared/codeEditor.html
@@ -1,4 +1,5 @@
-<script type="text/ng-template" id="tree_item_renderer.html">
+<div>
+	<script type="text/ng-template" id="tree_item_renderer.html">
 	<div ng-show="data.type == 'file'">
 		<a href="javascript:void(0);" ng-click="select(data)" ng-right-click="contextMenu(data)">
 			<span class="icon {{data.type}}"></span>
@@ -19,7 +20,6 @@
 
 
 	<div style="height: 100%;padding-right:0px; width: 300px;    position: absolute;top: 0; padding-top: 50px; margin:0; left: 0; z-index: 500;">
-
 		<div class="code-panel">
 			<div class="code-panel-inner">
 		<ol class="codetree">
@@ -46,7 +46,8 @@
 				<a href="javascript:void(0);" ng-click="select(file)">{{file.label}} <span ng-class="{ hidden: !file.changes }">*</span></a> <span class="close" ng-click="closeFile(file)">x</span>
 			</div>
 		</div> -->
-		<div style="height: 100%;">
+		<div style="height: 100%;" ng-show="!showCode" ng-transclude></div>
+		<div style="height: 100%;" ng-show="showCode">
 			<div id="editor" style="height: 100%; min-height: 200px; text-align: left; ">//Welcome to the OPengine editor.</div>
 			<div id="newfile" style="position: absolute; top: 0; left: 42px; width: 300px; z-index: 10;" ng-class="{ hidden: !showNewFile }">
 				<input id="newFileText" type="text" on-escape="cancelFile();" on-enter="newFile();" placeholder="New File..." ng-model="newFileName" class="form-control" />
@@ -94,3 +95,5 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+</div>
