--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -72,6 +72,40 @@ a {
 }
 
 
+.icon-sublime-logo .path1:before {
+    content: "\e925";
+    color: rgb(255, 255, 255);
+}
+.icon-sublime-logo .path2:before {
+    content: "\e926";
+    margin-left: -1em;
+    color: rgb(76, 76, 76);
+}
+.icon-sublime-logo .path3:before {
+    content: "\e927";
+    margin-left: -1em;
+    color: rgb(217, 217, 217);
+}
+.icon-sublime-logo .path4:before {
+    content: "\e928";
+    margin-left: -1em;
+    color: rgb(255, 129, 0);
+}
+.icon-sublime-logo .path5:before {
+    content: "\e929";
+    margin-left: -1em;
+    color: rgb(38, 38, 38);
+}
+.icon-sublime-logo .path6:before {
+    content: "\e92a";
+    margin-left: -1em;
+    color: rgb(153, 153, 153);
+}
+.icon-sublime-logo .path7:before {
+    content: "\e92b";
+    margin-left: -1em;
+    color: rgb(255, 255, 255);
+}
 .icon-checkbox-unchecked:before {
     content: "\44";
 }
@@ -641,7 +675,6 @@ a {
 }
 .icon-toggle-off:before {
     content: "\f204";
-
 }
 .icon-toggle-on:before {
     content: "\f205";
@@ -658,6 +691,7 @@ a {
 .icon-school:before {
     content: "\e80c";
 }
+
 
 .file .icon {
 	font-family: 'icomoon';
@@ -888,6 +922,7 @@ h2 {
   bottom: 0;
   background-color: @secondary-color;
   z-index: 10000;
+  box-shadow: -5px 0 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 .sidebar {
@@ -912,18 +947,17 @@ h2 {
             color: @highlight-color;
             list-style-type: none;
             text-align: left;
-            padding: 10px;
-            padding-top: 4px;
+            padding: 0;
             height: 50px;
             width: 50px;
             overflow: hidden;
             a {
                 color: @highlight-color;
-                padding: 0px;
+                padding: 12px;
                 margin: 0px;
                 display: flex;
                 font-size: 26px;
-                padding-top: 7px;
+                padding-top: 11px;
                 span {
                     padding: 0px;
                     margin: 0px;
@@ -994,10 +1028,10 @@ h2 {
       li {
           height: 35px;
           font-size: 16px;
-          padding: 14px;
-          padding-left: 17px;
+          padding: 0px;
           a {
-              padding-top: 0px;
+              padding: 17px;
+              padding-top: 14px;
               font-size: 16px;
               span {
                 margin-top: -6px;
@@ -1047,7 +1081,7 @@ h2 {
     border-bottom: 1px solid @highlight-color;
     a, button {
       margin: 0px;
-      margin-left: 20px;
+      margin-right: 20px;
       font-size: 20px;
       padding: 0px;
       display: inline-block;
@@ -1090,7 +1124,11 @@ h2 {
     ul.dropdown-menu {
         padding: 0px;
         li a {
-            font-size: 12px;
+          font-size: 14px;
+          margin: 0;
+          padding: 10px;
+          padding-left: 10px;
+          width: 100%;
         }
     }
 }
@@ -1187,18 +1225,19 @@ h2 {
 
 .console {
     position: absolute;
-    top: 30px;
+    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    margin: 0;
+    padding: 30px;
+    padding-top: 68px;
     opacity: 0.8;
     background-color: #000;
     color: #fff;
-    padding: 25px;
-    padding-bottom: 70px;
-    margin-bottom: 30px;
     z-index: 10000;
-    overflow: scroll;
+    overflow: auto;
+
     .line {
         padding: 1px 0px;
     }
@@ -1208,6 +1247,26 @@ h2 {
     .success {
         color: @active-color;
     }
+}
+
+.console::-webkit-scrollbar {
+    width: 12px;
+}
+
+.console::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
+.console::-webkit-scrollbar-track {
+    background-color: #000;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5);
+    border-radius: 0px;
+}
+
+.console::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #333;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5);
 }
 
 .modal {
