--- a/app/js/app/partials/settings.html
+++ b/app/js/app/partials/settings.html
@@ -16,7 +16,7 @@
     <br />
 
     <div class="text-left">
-        <b>PhysX</b> : <a onclick="require('shell').openExternal('https://developer.nvidia.com/programs/gamedev/register')" href="">https://developer.nvidia.com/programs/gamedev/register</a>
+        <b>PhysX</b> : <a onclick="require('electron').shell.openExternal('https://developer.nvidia.com/programs/gamedev/register')" href="">https://developer.nvidia.com/programs/gamedev/register</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
@@ -30,7 +30,7 @@
     <br />
 
     <div class="text-left">
-        <b>V8</b> : <a onclick="require('shell').openExternal('https://code.google.com/p/v8/')" href="">https://code.google.com/p/v8/</a>
+        <b>V8</b> : <a onclick="require('electron').shell.openExternal('https://code.google.com/p/v8/')" href="">https://code.google.com/p/v8/</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
@@ -44,7 +44,7 @@
     <br />
 
     <div class="text-left">
-        <b>FMOD</b> : <a onclick="require('shell').openExternal('http://www.fmod.org/')" href="">http://www.fmod.org/</a>
+        <b>FMOD</b> : <a onclick="require('electron').shell.openExternal('http://www.fmod.org/')" href="">http://www.fmod.org/</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
@@ -58,7 +58,7 @@
     <br />
 
     <div class="text-left">
-        <b>Asio</b> : <a onclick="require('shell').openExternal('http://think-async.com/')" href="">http://think-async.com/</a>
+        <b>Asio</b> : <a onclick="require('electron').shell.openExternal('http://think-async.com/')" href="">http://think-async.com/</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
@@ -72,7 +72,7 @@
     <br />
 
     <div class="text-left">
-        <b>RakNet</b> : <a onclick="require('shell').openExternal('https://github.com/TeamOPifex/RakNet')" href="">https://github.com/TeamOPifex/RakNet</a>
+        <b>RakNet</b> : <a onclick="require('electron').shell.openExternal('https://github.com/TeamOPifex/RakNet')" href="">https://github.com/TeamOPifex/RakNet</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
@@ -86,7 +86,7 @@
     <br />
 
     <div class="text-left">
-        <b>Assimp</b> : <a onclick="require('shell').openExternal('http://assimp.sourceforge.net/')" href="">http://assimp.sourceforge.net/</a>
+        <b>Assimp</b> : <a onclick="require('electron').shell.openExternal('http://assimp.sourceforge.net/')" href="">http://assimp.sourceforge.net/</a>
     </div>
     <div class="row">
         <div class="col-xs-8">
