--- a/app/js/app/partials/login.html
+++ b/app/js/app/partials/login.html
@@ -7,7 +7,7 @@
         <a href="https://github.com/login/oauth/authorize?client_id=6a6535c88ff733bb39c0&scope=user,user:email,repo&redirect_uri=http://launcher.opengine.io/authentication&state=launcher" class="btn btn-primary form-control">Login With Github</a>
         <br />
         <h4>Or use a Personal Access Token</h4>
-        <p>Create your Personal Access token here: <a onclick="require('shell').openExternal('https://github.com/settings/tokens')" href="">https://github.com/settings/tokens</a> <br /><small><i>( Only read access is needed on your Access Token )</i></small></p>
+        <p>Create your Personal Access token here: <a onclick="require('electron').shell.openExternal('https://github.com/settings/tokens')" href="">https://github.com/settings/tokens</a> <br /><small><i>( Only read access is needed on your Access Token )</i></small></p>
 
         <div class="row">
             <div class="col-xs-9">
@@ -34,13 +34,13 @@
         <h4>Launcher Requirements</h4>
         <i>You need command line access to these:</i>
         <div>
-            <b>Visual Studio Community (or higher)</b> : <a onclick="require('shell').openExternal('https://www.visualstudio.com/products/visual-studio-community-vs')" href="">https://www.visualstudio.com/products/visual-studio-community-vs</a>
+            <b>Visual Studio Community (or higher)</b> : <a onclick="require('electron').shell.openExternal('https://www.visualstudio.com/products/visual-studio-community-vs')" href="">https://www.visualstudio.com/products/visual-studio-community-vs</a>
         </div>
         <div>
-            <b>CMake</b> : <a onclick="require('shell').openExternal('https://cmake.org/download/')" href="">https://cmake.org/download/</a>
+            <b>CMake</b> : <a onclick="require('electron').shell.openExternal('https://cmake.org/download/')" href="">https://cmake.org/download/</a>
         </div>
         <div>
-            <b>Git</b> : <a onclick="require('shell').openExternal('http://git-scm.com/downloads')" href="">https://git-scm.com/downloads</a>
+            <b>Git</b> : <a onclick="require('electron').shell.openExternal('http://git-scm.com/downloads')" href="">https://git-scm.com/downloads</a>
         </div>
     </div>
 </div>
