--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -892,6 +892,7 @@ h2 {
         display: inline-block;
         padding: 10px 25px;
         font-size: 20px;
+        -webkit-app-region: no-drag;
       }
     }
 }
