--- a/app/js/app/partials/learn.html
+++ b/app/js/app/partials/learn.html
@@ -1,10 +1,1 @@
-<div class="row extrapadding section detail">
-    <div class="col-xs-12 text-left">
-        <h2 class="title">
-			Learn
-        </h2>
-		<div>
-			<h4>Coming Soon</h4>
-		</div>
-	</div>
-</div>
+<iframe src="http://docs.opengine.io" style="width:100%; height: 100%; border: 0; position: absolute;top: 0;left: 0;right: 0;bottom: 0;" />
